SERVER-3345: Read-only users can't output mapReduce to existing collection